// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlayArea snapshots hide cards when the game is over 1`] = `
<div
  class="playing-card-container columns box"
>
  <!---->
   
  <div
    class="column"
    id="drawn-cards"
  >
    <vue-playing-card-stub
      enter-active-class="animate__animated animate__flipInY"
      name="playingcard"
      signature="4s"
      tag="div"
    />
  </div>
</div>
`;

exports[`PlayArea snapshots show a card when there is one 1`] = `
<div
  class="playing-card-container columns box"
>
  <div
    class="column remaining-deck"
    id="deck"
  >
    <vue-playing-card-stub
      cover="true"
    />
  </div>
   
  <div
    class="column"
    id="drawn-cards"
  >
    <vue-playing-card-stub
      enter-active-class="animate__animated animate__flipInY"
      name="playingcard"
      signature="4s"
      tag="div"
    />
  </div>
</div>
`;

exports[`PlayArea snapshots show only the blank deck when there are no decks 1`] = `
<div
  class="playing-card-container columns box"
>
  <div
    class="column remaining-deck"
    id="deck"
  >
    <vue-playing-card-stub
      cover="true"
    />
  </div>
   
</div>
`;
